--- a/style/style.css
+++ b/style/style.css
@@ -6,18 +6,36 @@
 
 html {
   font-size: 62.5%;
+  font-family: "Roboto", sans-serif;
+}
+
+button {
+  border: 0.1rem outset rgb(252, 252, 252);
+  background-color: rgb(243, 241, 241);
+  border-radius: 1rem;
+  padding: 0.8rem 1.5rem;
+  cursor: pointer;
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1), 0 4px 4px 0 rgba(0, 0, 0, 0.1);
+  font-size: 1.4rem;
+  font-family: "Roboto", sans-serif;
+}
+button:hover {
+  background-color: white;
+  color: black;
+  box-shadow: none;
+  border: 0.1rem solid rgb(147, 147, 147);
 }
 
 #main-page {
-  min-height: 100vh;
+  min-height: 95vh;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
   overflow: hidden;
 }
 #main-page .title-container {
-  height: 2rem;
+  height: 10vh;
   width: 90%;
   margin: auto;
 }
@@ -27,7 +45,7 @@ html {
   font-size: 8rem;
 }
 #main-page .array-simulator {
-  height: 40rem;
+  height: 40vh;
   width: 90%;
   margin: auto;
   display: flex;
@@ -36,51 +54,57 @@ html {
   flex-direction: column;
 }
 #main-page .array {
-  background-color: rgb(61, 59, 59);
+  background-color: rgb(230, 230, 230);
   height: 27rem;
-  width: 97.5%;
+  width: 72.5rem;
   margin: auto;
   display: flex;
+  flex-shrink: 0;
   justify-content: flex-start;
   align-items: center;
   border-radius: 1.5rem;
-  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1), 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  border: 3px solid rgb(101, 196, 252);
+  box-shadow: 0 15px 15px rgba(0, 0, 0, 0.1), 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  border: 3px outset rgb(201, 201, 201);
 }
 #main-page .item {
   height: 24rem;
   width: 5rem;
-  background-color: rgb(101, 196, 252);
+  background-color: rgb(123, 221, 248);
   margin-left: 0.5rem;
   border-radius: 1.5rem;
   text-align: center;
-  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1), 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 15px 15px rgba(0, 0, 0, 0.1), 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   font-size: 2.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 0.3rem rgb(255, 255, 255) solid;
+  border: 0.3rem rgb(255, 255, 255) inset;
 }
 #main-page .button-container {
-  min-height: 10rem;
+  min-height: 40rem;
   width: 90%;
   margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-#main-page .splice-container {
-  min-height: 10rem;
+#main-page .splice-clear-container {
+  min-height: 1rem;
+  width: 40%;
+  margin: auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 #main-page .item-selected {
-  border: 5px solid yellow;
+  border: 5px outset rgb(253, 94, 94);
 }
 #main-page .user-info {
   font-size: 2.5rem;
   opacity: 0;
   margin: auto;
-  width: 90%;
+  width: 100%;
 }
 
 .button-container {
@@ -88,6 +112,7 @@ html {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  height: 30vh;
 }
 .button-container .group-btn-container {
   display: flex;
@@ -99,7 +124,8 @@ html {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 20rem;
+  flex-direction: column;
+  height: 30rem;
   width: 20rem;
 }
 .button-container .individual-btn-container .next-element-container {
@@ -114,14 +140,23 @@ html {
 .button-container .individual-btn-container .small-item {
   height: 15.5rem;
   width: 5rem;
-  background-color: rgb(101, 196, 252);
+  background-color: rgb(123, 221, 248);
   margin-left: 0.5rem;
   border-radius: 1.5rem;
   text-align: center;
-  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1), 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  font-size: 2.5rem;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1), 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  font-size: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 0.3rem rgb(255, 255, 255) solid;
+  border: 0.3rem rgb(232, 232, 232) inset;
+}
+
+@media only screen and (max-width: 900px) {
+  #main-page .array {
+    width: 60rem;
+  }
+  #main-page .item {
+    width: 4rem;
+  }
 }/*# sourceMappingURL=style.css.map */
