--- a/style/style.scss
+++ b/style/style.scss
@@ -6,21 +6,37 @@
 
 html{
     font-size: 62.5%;
+    font-family: 'Roboto', sans-serif;
 }
 
-//variables
+button{
+    border: .1rem outset rgb(252, 252, 252);
+    background-color: rgb(243, 241, 241);
+    border-radius: 1rem;
+    padding: .8rem 1.5rem;
+    cursor: pointer;
+    box-shadow: 0 3px 3px rgba(0,0,0,.1), 0 4px 4px 0 rgba(0,0,0,.1);
+    font-size: 1.4rem;
+    font-family: 'Roboto', sans-serif;
+    &:hover{
+        background-color: white;
+        color: black;
+        box-shadow: none;
+        border: .1rem solid rgb(147, 147, 147);
+    }
+}
 
 #main-page{
-    min-height: 100vh;
+    min-height: 95vh;
     // background-color: rgb(82, 171, 196);
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
     overflow: hidden;
     
     .title-container{
-        height: 2rem;
+        height: 10vh;
         width: 90%;
         margin: auto;
     }
@@ -32,7 +48,7 @@ html{
     }
     //array container
     .array-simulator{
-        height: 40rem;
+        height: 40vh;
         width: 90%;
         margin: auto;
         // background-color: rgb(222, 223, 223);
@@ -43,55 +59,61 @@ html{
     }
     //each individual array container
     .array{
-        background-color: rgb(61, 59, 59);
+        background-color: rgb(230, 230, 230);
         height: 27rem;
-        width: 97.5%; // 72.5rem
+        width: 72.5rem; // 72.5rem
         margin: auto; 
         display: flex;
+        flex-shrink: 0;
         justify-content: flex-start;
         align-items: center;
         border-radius: 1.5rem;
-        box-shadow: 0 20px 30px rgba(0,0,0,.1), 0 4px 4px 0 rgba(0,0,0,.15);
-        border: 3px solid rgb(101, 196, 252);
+        box-shadow: 0 15px 15px rgba(0,0,0,.1), 0 4px 4px 0 rgba(0,0,0,.15);
+        border: 3px outset rgb(201, 201, 201);
     }
     //individual items within a single array 
     .item{
         height: 24rem;
         width: 5rem;
-        background-color: rgb(101, 196, 252);
+        background-color: rgb(123, 221, 248);
         margin-left: .5rem;
         border-radius: 1.5rem;
         text-align: center;
-        box-shadow: 0 20px 30px rgba(0,0,0,.1), 0 4px 4px 0 rgba(0,0,0,.15);
+        box-shadow: 0 15px 15px rgba(0,0,0,.1), 0 4px 4px 0 rgba(0,0,0,.15);
         font-size: 2.5rem;
         display: flex;
         justify-content: center;
         align-items: center;
-        border: .3rem rgb(255, 255, 255) solid;
+        border: .3rem rgb(255, 255, 255) inset;
     }
     .button-container{
-        min-height: 10rem;
+        min-height: 40rem;
         width: 90%;
         margin: auto;
-        // background-color: antiquewhite;
         display: flex;
         justify-content: center;
         align-items: center;
     }
-    .splice-container{
-        min-height: 10rem;
+    .splice-clear-container{
+        min-height: 1rem;
+        width: 40%;
+        margin: auto;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+
     }
 }
 
 #main-page{
     .item-selected{
-        border: 5px solid yellow;
+        border: 5px outset rgb(253, 94, 94);
     }
     .user-info{
         font-size: 2.5rem;
         opacity: 0;
         margin: auto;
-        width: 90%;
+        width: 100%;
     }
 }
 
@@ -100,6 +122,7 @@ html{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    height: 30vh;
 
     .group-btn-container{
         display: flex;
@@ -112,7 +135,8 @@ html{
         display: flex;
         justify-content: space-around;
         align-items: center;
-        height: 20rem;
+        flex-direction: column;
+        height: 30rem;
         width: 20rem;
         // background-color: grey;
         
@@ -130,18 +154,19 @@ html{
         .small-item{
         height: 15.5rem;
         width: 5rem;
-        background-color: rgb(101, 196, 252);
+        background-color: rgb(123, 221, 248);
         margin-left: .5rem;
         border-radius: 1.5rem;
         text-align: center;
-        box-shadow: 0 20px 30px rgba(0,0,0,.1), 0 4px 4px 0 rgba(0,0,0,.15);
-        font-size: 2.5rem;
+        box-shadow: 0 5px 5px rgba(0,0,0,.1), 0 4px 4px 0 rgba(0,0,0,.15);
+        font-size: 2rem;
         display: flex;
         justify-content: center;
         align-items: center;
-        border: .3rem rgb(255, 255, 255) solid;
+        border: .3rem rgb(232, 232, 232) inset;
         }
     }
 
 }
 
+@import 'mobile.scss';
