--- a/style/style.css
+++ b/style/style.css
@@ -18,6 +18,7 @@ button {
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1), 0 4px 4px 0 rgba(0, 0, 0, 0.1);
   font-size: 1.4rem;
   font-family: "Roboto", sans-serif;
+  color: black;
 }
 button:hover {
   background-color: white;
