--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,7 @@ html {
 }
 
 button {
+  all: unset;
   border: 0.1rem outset rgb(252, 252, 252);
   background-color: rgb(243, 241, 241);
   border-radius: 1rem;
@@ -18,7 +19,7 @@ button {
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1), 0 4px 4px 0 rgba(0, 0, 0, 0.1);
   font-size: 1.4rem;
   font-family: "Roboto", sans-serif;
-  color: black;
+  color: black !important;
 }
 button:hover {
   background-color: white;
