fixed a splicing bug where user can delete without clicking on splicing

--- a/style/style.css
+++ b/style/style.css
@@ -82,6 +82,7 @@ button:hover {
   justify-content: center;
   align-items: center;
   border: 0.3rem rgb(255, 255, 255) outset;
+  pointer-events: none;
 }
 #main-page .button-container {
   min-height: 40rem;
