--- a/style/style.scss
+++ b/style/style.scss
@@ -92,6 +92,7 @@ $itemMainColor: rgb(213, 211, 211);
         justify-content: center;
         align-items: center;
         border: .3rem rgb(255, 255, 255) outset;
+        pointer-events: none;
     }
     .button-container{
         min-height: 40rem;
