--- a/style/style.css
+++ b/style/style.css
@@ -84,14 +84,6 @@ button:hover {
   border: 0.3rem rgb(255, 255, 255) outset;
   pointer-events: none;
 }
-#main-page .button-container {
-  min-height: 40rem;
-  width: 100%;
-  margin: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 #main-page .splice-clear-container {
   min-height: 1rem;
   width: 40%;
@@ -111,6 +103,14 @@ button:hover {
   width: 100%;
 }
 
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  min-height: 30vh;
+  width: 100vw;
+}
 .button-container .group-btn-container {
   display: flex;
   justify-content: center;
@@ -415,15 +415,19 @@ button:hover {
   }
 }
 @media only screen and (min-height: 400px) and (max-height: 989px) and (min-width: 950px) {
+  #main-page {
+    min-height: 100vh;
+  }
   #main-page .app-title {
     font-size: 7rem;
   }
   #main-page .array {
-    width: 59.5rem;
+    width: 72.5rem;
     height: 30rem;
   }
   #main-page .item {
     height: 27rem;
+    width: 5rem;
   }
 
   .button-container .individual-btn-container {
