--- a/style/style.css
+++ b/style/style.css
@@ -173,6 +173,9 @@ button:hover {
     width: 90%;
     margin: auto;
   }
+  #main-page .app-title {
+    font-size: 7.5rem;
+  }
   #main-page .splice-clear-container {
     width: 90%;
     margin: auto;
@@ -225,7 +228,7 @@ button:hover {
     height: 10vh;
   }
   #main-page .app-title {
-    font-size: 7.5rem;
+    font-size: 6rem;
   }
   #main-page .array-simulator {
     height: 40vh;
@@ -369,7 +372,7 @@ button:hover {
     height: 9vh;
   }
   #main-page .app-title {
-    font-size: 4.5rem;
+    font-size: 4.2rem;
   }
   #main-page .array-simulator {
     height: 25rem;
